--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EcoCarManager - Gestor de Vehículos Sostenible</title>
+    <title>CircularApp - Evaluador de circularidad de productos</title>
   </head>
   <body>
-    <h1>EcoCarManager</h1>
+    <h1>CircularApp</h1>
   </body>
 </html>
